--- a/index.html
+++ b/index.html
@@ -15,9 +15,9 @@
 
     <div class="jumbotron">
         <h1 class="display-4">Timezone</h1>
-        <p class="lead">This is a simple timezone page that whows the time in Sao Paulo and New York.</p>
+        <p class="lead">This is a simple timezone page that displays the local time in Sao Paulo and New York.</p>
         <hr class="my-4">
-        <p class="font-italic">It's impressive what a simple code can do!.</p>
+        <p class="font-italic">It's impressive what a simple code can do!</p>
     </div>
 
     <div class="container">
@@ -89,7 +89,7 @@
         window.setInterval(updateTime, 1000)
     </script>
 
-    <footer class="text-center py-2">Developed by Aline Magalhaes &copy;</footer>
+    <footer class="text-center py-2">Developed by<span class="font-weight-bold">Aline Magalhaes &copy;</span></footer>
 
 </body>
 
