updated São Paulo

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
     <div class="jumbotron">
         <h1 class="display-4">Timezone</h1>
-        <p class="lead">This is a simple timezone page that displays the local time in Sao Paulo and New York.</p>
+        <p class="lead">This is a simple timezone page that displays the local time in São Paulo and New York.</p>
         <hr class="my-4">
         <p class="font-italic">It's impressive what a simple code can do!</p>
     </div>
@@ -29,8 +29,8 @@
                     <img src="./images/Sao Paulo.jpg" class="card-img-top" style="max-height: 150px"
                         alt="Image of Sao Paulo">
                     <div class="card-body">
-                        <h5 class="card-title">Sao Paulo</h5>
-                        <p class="card-text">Sao Paulo is the biggest city in Brazil.</p>
+                        <h5 class="card-title">São Paulo</h5>
+                        <p class="card-text">São Paulo is the biggest city in Brazil.</p>
                         <a href="https://www.lonelyplanet.com/brazil/sao-paulo" class="btn btn-primary">Learn more</a>
                     </div>
                 </div>
@@ -54,14 +54,14 @@
                 <table class="table table-striped mt-5">
                     <thead>
                         <tr>
-                            <th scope="col" class="text-center">Sao Paulo</th>
+                            <th scope="col" class="text-center">São Paulo</th>
                             <th scope="col" class="text-center">New York</th>
                         </tr>
                     </thead>
                     <tbody>
                         <tr>
                             <td>
-                                <p class="text-center" id="time-sao-paulo">Sao Paulo</p>
+                                <p class="text-center" id="time-sao-paulo">São Paulo</p>
                             </td>
                             <td>
                                 <p class="text-center" id="time-new-york">New York</p>
